--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DemoNPay</string>
-    <string name="action_github">Git Repo</string>
+    <string name="action_github">GitHub Repo</string>
 
     <string name="service_name">Nombre:</string>
     <string name="service_description">Descripción:</string>
