Se agrego opcion multiidioma en la app. Ademas de agregar el ultimo jar generado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="type_item">Tipo: </string>
     <string name="name_item">Nombre:</string>
 
+
+    <string name="service_subs">Servicio Suscripciones</string>
+    <string name="service_catalog">Servicio Catalogos</string>
 </resources>
